<resources>
    <string name="app_name">Gestura</string>
    <string name="signup_welcome">Daftar ke GESTURA</string>
    <string name="sudah_punya_akun">Aku sudah punya akun</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">GESTURA adalah aplikasi pembelajaran bahasa isyarat untuk membantu kamu <font color="#C6E053">berkomunikasi dengan Teman Tuli.</font></string>
    <string name="message_login_page">Belum punya akun?<font color="#C6E053"> Daftar</font></string>
    <string name="title_welcome_page">Ayo belajar <font color="#C6E053">Bahasa Isyarat</font> bersama <font color="#FFFFFF">GESTURA</font>!</string>
    <string name="title_signup_page">Selamat Datang, <font color="#C6E053"> Teman Dengar</font></string>
    <string name="email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="nama_pengguna">Nama Kamu</string>

    <string name="title_login_page">Halo, <font color="#C6E053">Teman Dengar</font></string>
    <string name="message_signup_page">Sudah punya akun?<font color="#C6E053"> Masuk</font></string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Ganti Akun</string>

    <string name="confirm_password">Ulangi Kata Sandi</string>
<<<<<<< HEAD
    <string name="result">Hasil Analisis</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>


    <string name="model_initialization_failed">Model is not initialized yet</string>
=======
    <string name="login_desc">Masuk pake akun kamu yuk</string>
    <string name="signup_desc">Untuk menggunakan GESTURA, buat akun dulu yuk!</string>
    <string name="pastikan_data_yang_anda_masukkan_benar">Pastikan data yang kamu masukin benar</string>
    <string name="password_kamu_harus_lebih_dari_8_karakter">Password kamu harus lebih dari 8 karakter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

>>>>>>> origin/main
</resources>