<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".view.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/halo_tangan" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_marginStart="2dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/title_welcome_page"
        android:lineSpacingExtra="-8.5dp"
        android:textColor="@color/white"
        android:textSize="26.65sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/signupButton"
        app:layout_constraintEnd_toEndOf="@id/signupButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        tools:alpha="100" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/message_welcome_page"
        android:textColor="@color/white"
        android:textSize="14.65sp"
        app:layout_constraintEnd_toEndOf="@id/titleTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        tools:alpha="100" />


    <Button
        android:id="@+id/signupButton"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:alpha="0"
        android:background="@drawable/custom_button"
        app:backgroundTint="@color/ijogestura"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18.9sp"
        android:text="@string/signup_welcome"
        android:textColor="@color/itemgestura"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descTextView"
        tools:alpha="100" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_outline"
        app:backgroundTint="@color/ijogestura"
        android:alpha="0"
        android:fontFamily="@font/poppins_bold"
        android:textSize="18.9sp"
        android:text="@string/sudah_punya_akun"
        app:layout_constraintStart_toStartOf="@id/signupButton"
        app:layout_constraintEnd_toEndOf="@id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        tools:alpha="100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.55"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
